	* flow: Every handler/function call statement and variable declaration must be followed by a semicolon ';'.
	* http: Fixed a bug that caused a crash when posting to a completion-callback into a connection to crash.
	* http: Fixed large requests that lead to a timeout or hang forever.
	* http: Improved client-side caching awareness for GET requests on static files.
	* director: Added experimental response output caching support.
	* director: Fixes 2 bugs (in http-backend and fastcgi backend) with regards to their connection ref-counting.
	* x0d: Added --dump-ast parameter to dump Flow's parsed AST.
	* x0d: plugin "vhost" has been removed in favor of the new match-keyword.
	* x0d: Adds --dump-ast and --dump-tc command line options to accompany --dump-ir (for debugging purposes).
	* x0d: Adds `request_header_buffer_size` config setup variable.
	* x0d: Adds `request_body_buffer_size` config setup variable.

0.7.0 (2013-10-18)

	* general: major source tree restructures, to make things more clear.
	* general: Port of XzeroBase and XzeroHttp to Mac OS/X, more to follow.
	* http: libXzeroHttp now no longer depends on libXzeroFlow, eliminating unneeded dependencies.
	* http: Added C-API for basic HTTP server embedding that you can use by linking against libx0capi.so.
	* http: Fixing regression regarding HTTP pipelining (#52).
	* http: Added support opportunistic writes.
	* http: Added SO_LINGER support via `lingering(timespan)` setup property.
	Must be enabled at compilation time via -DWITH_OPPORTUNISTIC_WRITE=ON.
	* base, flow: added support for multi-accept
	Must be enabled at compilation time via -DWITH_MULTI_ACCEPT=ON.
	* flow: ruby-1.9 alike named parameter association.
	* flow: Added new read-property `req.query`.
	* core: Introduce severities: crit, alert, emerg.
	* core: Support SO_REUSEPORT (as introduced in Linux Kernel 3.9.0, and
			supported by other UNIX OSes already)
	* x0d: Added bash completion.